vault/dev/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: guardian
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`vault-dev.kindjeff.com`)
      kind: Rule
      services:
        - name: vault-ui
          port: 8200
    - match: Host(`vault.rss3.dev`)
      kind: Rule
      services:
        - name: vault-ui
          port: 8200
